# iidy

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  flake.nix  formatting-requirements.md  setup.sh  todo.md
iidy/: .gitignore  .mcp.json  .tarpaulin.toml  CLAUDE.md  Cargo.toml  IIDY_JS_COMPATIBILITY_FIXES.md  Makefile  test-join-format.yaml  token-management-design.md
iidy/benches/: parsing_optimization_benchmark.rs  plain_string_analysis.rs  realistic_string_processing.rs  resolve_ast_optimization_benchmark.rs  resolve_ast_performance_focused.rs  simple_benchmark.rs  tags_optimization_benchmark.rs  yaml_preprocessing_benchmarks.rs
iidy/docs/: COVERAGE.md  SECURITY.md
iidy/example-stacks/hello-world/: cfn-template.yaml  demo-script.yaml
iidy/example-templates/: advanced-cloudformation.yaml  basic-test.yaml  cloudformation-tags-demo.yaml  complex-template.yaml  config.yaml  import-test.yaml  simple-cloudformation.yaml  simple-template.yaml  string-formatting-demo.yaml  toUpperCase.yaml
iidy/example-templates/errors/: README.md  cloudformation-empty-arrays.yaml  frompairs-wrong-item-type.yaml  groupby-wrong-items-type.yaml  map-missing-template.yaml  map-wrong-items-type.yaml  maplisttohash-wrong-items-type.yaml  maplisttohash-wrong-template-result.yaml  merge-missing-sources.yaml  multiple-occurrence-error-positioning.yaml  parsing-eq-wrong-element-count.yaml  parsing-include-invalid-format.yaml  parsing-join-not-sequence.yaml  parsing-let-missing-in-field.yaml  parsing-split-not-sequence.yaml  split-wrong-string-type.yaml  tag-map-uses-transform.yaml  tag-missing-required-field.yaml  unknown-tag-typo.yaml  yaml-syntax-unexpected-end.yaml
iidy/example-templates/expected-outputs/: basic-test.yaml
iidy/example-templates/invalid/: config.yaml  showcase.yaml
iidy/example-templates/yaml-iidy-syntax/: array-syntax-example.yaml  array-syntax-simple.yaml  defs-nested-dynamic-scopes.yaml  defs-using-handlebars-or-vars.yaml  frompairs.yaml  groupby.yaml  if-conditional.yaml  include-equivalence.yaml  include-handlebars-equivalence.yaml  join-example.yaml  let.yaml  map-transform.yaml  mapvalues-example.yaml  mapvalues.yaml  merge-operations.yaml  merge.yaml  mergemap.yaml  split.yaml
iidy/notes/: 2025-01-16-comprehensive-test-coverage-plan.md  2025-01-16-multi-error-parser-review.md  2025-05-05-phase-1-core-yaml.md  2025-05-05-plan.md  2025-06-06-error-reporting-improvement-design.md  2025-06-06-phase-1-core-yaml.md  2025-06-07-color-theming-design.md  2025-06-14-stackframe-removal-decision.md  2025-06-16-parsing-test-cleanup.md  2025-06-16-use-src-meta-in-errors.md  2025-06-17-console-output-modes.md  2025-06-17-data-driven-output-architecture-implementation.md  2025-06-17-data-driven-output-architecture.md  2025-06-17-path-tracking-parser-experiment.md  2025-06-18-aws-error-handling-notes.md  2025-06-18-context-window-recovery-instructions.md  2025-06-18-critical-stack-args-implementation-plan.md  2025-06-20-list-stacks-json-query-implementation.md  2025-06-20-s3-url-auto-signing-implementation.md  2025-07-01-cfn-handler-normalization-plan.md  2025-07-05-demo-rs-completion-analysis.md  2025-07-05-get-import-command-analysis.md  2025-07-06-cfn-command-exit-code-consistency-analysis.md  2025-07-07-get-import-migration-analysis.md  2025-07-09-code-duplication-analysis.md  2025-07-09-code-duplication-bug-analysis.md  2025-09-27-defs-variable-resolution-bug-analysis.md  2025-09-28-renderer-cli-required-prop.md  2025-09-29-native-anchor-alias-support.md  2025-10-01-aws-config-duplication-analysis.md  2025-10-01-region-display-bug.md  2025-10-02-credential-source-display-plan.md  2025-10-02-remove-sts-calls-from-renderer.md  ADR-2025-07-06-output-sequencing-architecture.md  BENCHMARKS.md  IIDY_JS_COMPATIBILITY_FIXES.md  aws_api_analysis.org  index.md  template-approval-design-spec.md
iidy/src/: aws.rs  cli.rs  cli_context.rs  color.rs  debug.rs  demo.rs  describe_stack.rs  display.rs  explain.rs  get_stack_template.rs  lib.rs  list_stacks.rs  main.rs  preprocess.rs  render.rs  stack_args.rs  stack_args_new.rs  terminal.rs  timing.rs
iidy/src/aws/: client_req_token.rs  credential_source.rs  mod.rs
iidy/src/cfn/: changeset_operations.rs  console.rs  create_changeset.rs  create_or_update.rs  create_stack.rs  delete_stack.rs  describe_stack.rs  describe_stack_drift.rs  error_handling.rs  estimate_cost.rs  exec_changeset.rs  get_import.rs  get_stack_instances.rs  get_stack_template.rs  is_terminal_status.rs  list_stacks.rs  mod.rs  operations.rs  request_builder.rs  stack_args.rs  stack_operations.rs  template_approval_request.rs  template_approval_review.rs  template_loader.rs  update_stack.rs  watch_stack.rs
iidy/src/output/: aws_conversion.rs  color.rs  data.rs  demo.rs  keyboard.rs  manager.rs  mod.rs  renderer.rs  spinner.rs  (+2 more)
iidy/tests/: array_index_extraction_test.rs  context_aware_position_verification_test.rs  debug_array_context_test.rs  dynamic_output_manager_tests.rs  enhanced_error_reporting_tests.rs  equivalence_tests.rs  error_examples_snapshots.rs  error_reporting_tests.rs  example_templates_snapshots.rs  fixture_validation_tests.rs  inconsistent_indentation_tests.rs  input_uri_traversal_tests.rs  json_renderer_integration_tests.rs  keyboard_integration_tests.rs  multiple_if_tag_error_position_test.rs  nested_import_debug.rs  output_renderer_snapshots.rs  output_unit_tests.rs  parser_context_edge_cases_tests.rs  parser_context_multiple_occurrences_tests.rs  parser_context_position_tests.rs  parser_error_position_tests.rs  pixel_perfect_output_tests.rs  plain_mode_ordering_test.rs  proof_of_fix_test.rs  property_tests.proptest-regressions  property_tests.rs  scope_system_tests.rs  stack_events_title_test.rs  tag_resolver_trait_tests.rs  token_integration.rs  tree_sitter_array_debug.rs  tree_sitter_debug.rs  tree_sitter_path_debug.rs  tree_sitter_tag_debug.rs  variable_origin_integration_tests.rs  yaml_anchors_aliases_tests.rs  yaml_array_syntax_tests.rs  yaml_boolean_compatibility_tests.rs  yaml_path_debug_test.rs  (+5 more)
(+599 files in other folders)
