[package]
name = "iidy"
version = "0.1.0"
edition = "2024"
license = "MIT"
default-run = "iidy"

[features]
default = []
debug-logging = []

[lib]
name = "iidy"
path = "src/lib.rs"

[[bin]]
name = "iidy"
path = "src/main.rs"


[dependencies]
atty = "0.2.14"

clap = { version = "4.5.39", features = ["derive", "wrap_help"] } # ... unicode, debug
# clap-help = "1.4.0" # ... later https://github.com/Canop/clap-help
clap_complete = {version="4.5.51", features=[]} # debug

# AWS CloudFormation SDK and config helpers
aws-config = "1"
aws-sdk-cloudformation = "1"
aws-sdk-kms = "1"
aws-sdk-s3 = "1"
aws-sdk-sns = "1"
aws-sdk-ssm = "1"
aws-sdk-sts = "1"
aws-smithy-types = "1"

# Date/time handling  
chrono = { version = "0.4", features = ["serde"] }

# Regular expressions for YAML post-processing
regex = "1.10"


# YAML parsing
serde = { version = "1", features = ["derive"] }
# TODO: serde_yaml is deprecated - migrate to serde_yml for better tagged value support
serde_yaml = "0.9"
serde_json = "1"
# JSON Schema validation for custom resource template $params
jsonschema = "0.28"
# yaml-rust for better formatting control
yaml-rust = "0.4"

# JMESPath for JSON query filtering
jmespath = "0.3"

# Diff generation for template approval
similar = "2.4"

# Tree-sitter for precise YAML location tracking
tree-sitter = "0.24"
tree-sitter-yaml = "0.7"

# Error handling utilities
anyhow = "1"
thiserror = "1"

# Tokio runtime required by AWS SDK
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "sync", "time", "fs", "process"] }
aws-types = "1.3.7"
aws-credential-types = "1.2.3"
# Import preprocessing dependencies
handlebars = "4.0"
reqwest = { version = "0.11", features = ["json"] }
sha2 = "0.10"
url = "2.4"
urlencoding = "2.1"
async-trait = "0.1"
base64 = "0.21"
hex = "0.4"
rand = "0.8"
uuid = { version = "1.0", features = ["v4"] }
smallvec = "1.11"
heck = "0.5"
glob = "0.3"

# Timing/NTP support
ntp = "0.5"

# Terminal output and color theming
owo-colors = "4.0"
anstyle = "1.0.10"
indicatif = "0.17"
textwrap = "0.16"
ratatui = "0.27"

# Utilities for demo feature
tempfile = "3"
terminal_size = "0.4"
crossterm = "0.29"
log = "0.4.27"
env_logger = "0.11.8"
portable-pty = "0.9.0"
once_cell = "1.21.3"

[profile.dev]
debug = "line-tables-only"

[profile.release]
strip = true
lto = true
codegen-units = 1

[dev-dependencies]
# Testing and mocking
mockito = "1.2"
tokio-test = "0.4"

# Property-based testing
proptest = "1.0"

# Snapshot testing
insta = { version = "1.34", features = ["yaml"] }

# Benchmarking
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }

[[bench]]
name = "yaml_preprocessing_benchmarks"
harness = false

[[bench]]
name = "simple_benchmark"
harness = false

[[bench]]
name = "parsing_optimization_benchmark"
harness = false
