[package]
name = "iidy"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
atty = "0.2.14"

clap = { version = "4.5.38", features = ["derive", "wrap_help"] } # ... unicode
clap-help = "1.4.0"
clap_complete = "4.5.50"

# AWS CloudFormation SDK and config helpers
aws-config = "1"
aws-sdk-cloudformation = "1"
aws-sdk-ec2 = "1"
aws-smithy-types = "1"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# YAML parsing
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"

# Error handling utilities
anyhow = "1"

# Tokio runtime required by AWS SDK
tokio = { version = "1", features = ["full"] }
aws-types = "1.3.7"
aws-credential-types = "1.2.3"
# Utilities for demo feature
tempfile = "3"
terminal_size = "0.4"
crossterm = "0.29"
anstyle = "1.0.10"
