[package]
name = "iidy"
version = "0.1.0"
edition = "2024"
license = "MIT"

[lib]
name = "iidy"
path = "src/lib.rs"

[[bin]]
name = "iidy"
path = "src/main.rs"

[dependencies]
atty = "0.2.14"

clap = { version = "4.5.39", features = ["derive", "wrap_help"] } # ... unicode, debug
# clap-help = "1.4.0" # ... later https://github.com/Canop/clap-help
clap_complete = {version="4.5.51", features=[]} # debug

# AWS CloudFormation SDK and config helpers
aws-config = "1"
aws-sdk-cloudformation = "1"
aws-sdk-ec2 = "1"
aws-sdk-s3 = "1"
aws-sdk-ssm = "1"
aws-smithy-types = "1"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# YAML parsing
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"

# Error handling utilities
anyhow = "1"

# Tokio runtime required by AWS SDK
tokio = { version = "1", features = ["full"] }
aws-types = "1.3.7"
aws-credential-types = "1.2.3"
# Import preprocessing dependencies
handlebars = "4.0"
reqwest = { version = "0.11", features = ["json"] }
sha2 = "0.10"
url = "2.4"
async-trait = "0.1"
base64 = "0.21"
hex = "0.4"
rand = "0.8"

# Timing/NTP support
ntp = "0.5"

# Utilities for demo feature
tempfile = "3"
terminal_size = "0.4"
crossterm = "0.29"
anstyle = "1.0.10"
log = "0.4.27"
env_logger = "0.11.8"

[dev-dependencies]
# Testing and mocking
mockito = "1.2"
tokio-test = "0.4"

# Property-based testing
proptest = "1.0"
